--- a/app/src/main/res/layout-land/tv_activity_main.xml
+++ b/app/src/main/res/layout-land/tv_activity_main.xml
@@ -28,6 +28,7 @@
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:gravity="center"
             android:text="@string/login" />
 
         <ImageButton
