--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
             style="@style/white70_14_text_style"
             android:layout_below="@+id/tv_address_key"
             android:layout_marginTop="@dimen/d10"
+            android:ellipsize="end"
             android:gravity="center|left" />
 
         <ImageButton
