--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -144,7 +144,7 @@
                                 android:scrollbars="none"
                                 tools:listitem="@layout/tv_item_transaction" />
 
-                            <io.bcaas.view.TVTextView
+                            <io.bcaas.view.textview.TVTextView
                                 android:id="@+id/tv_loading_more"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/d30"
