--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <include layout="@layout/include_header" />
@@ -32,13 +32,13 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/tv_address_key"
                 android:background="@color/transparent"
-                android:paddingLeft="@dimen/d12"
                 android:src="@mipmap/icon_copy" />
 
             <TextView
                 android:id="@+id/tv_account_address_value"
                 style="@style/black70_14_single_text_style"
                 android:layout_marginTop="@dimen/d20"
+                android:layout_alignBottom="@+id/tv_address_key"
                 android:layout_toLeftOf="@+id/ib_copy"
                 android:layout_toRightOf="@+id/tv_address_key"
                 android:gravity="center_vertical|right" />
@@ -85,21 +85,19 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/tv_address_key"
-                android:layout_marginLeft="@dimen/d20"
+                android:layout_marginLeft="@dimen/d10"
                 android:layout_marginTop="@dimen/d23"
                 android:gravity="right|bottom"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_currency"
-                    style="@style/black_16_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/black_12_text_style"
                     android:layout_gravity="bottom"
+                    android:layout_marginRight="@dimen/d10"
                     android:drawablePadding="@dimen/d5"
                     android:drawableRight="@mipmap/icon_select_red"
-                    android:gravity="bottom"
-                    android:textSize="@dimen/text_size_12" />
+                    android:gravity="bottom" />
 
             </LinearLayout>
 
