--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -127,7 +127,10 @@
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_16</item>
     </style>
-
+    <style name="black_12_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
     <style name="black_14_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
