--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -127,10 +127,12 @@
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_16</item>
     </style>
+
     <style name="black_12_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_12</item>
     </style>
+
     <style name="black_14_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -541,6 +543,20 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
+    <!--自定义dialog背景全透明无边框theme -->
+    <style name="tv_bcaas_dialog" parent="android:style/Theme.Dialog">
+        <!--背景颜色及和透明程度-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--是否去除标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!--是否去除边框-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:background">@drawable/bg_white</item>
+    </style>
 
     <!--  ********************************  TV end  ********************************  -->
 
