--- a/app/src/main/res/drawable/edit_text_cursor_drawable.xml
+++ b/app/src/main/res/drawable/edit_text_cursor_drawable.xml
@@ -7,7 +7,7 @@
 
         <!-- 光标宽度可以自己定义 --></span>
 
-    <solid android:color="@color/black70_1d2124" />
+    <solid android:color="@color/button_right_color" />
 
     <!-- 光标颜色可以自己定义 -->
 </shape>
