--- a/app/src/main/res/layout-land/tv_activity_main.xml
+++ b/app/src/main/res/layout-land/tv_activity_main.xml
@@ -31,6 +31,20 @@
             android:gravity="center"
             android:text="@string/login" />
 
+        <io.bcaas.view.textview.TVTextView
+            android:id="@+id/tv_change_server"
+            style="@style/tv_white_24_text_style"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv_login"
+            android:layout_marginTop="@dimen/d20"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center"
+            android:text="@string/change_server"
+            android:visibility="gone" />
+
+
         <ImageButton
             android:id="@+id/ib_logout"
             android:layout_width="wrap_content"
@@ -55,7 +69,7 @@
                     android:layout_width="@dimen/d227"
                     android:layout_height="@dimen/d82"
                     android:background="@color/transparent"
-                    android:src="@mipmap/tv_icon_logo_big" />
+                    android:src="@mipmap/tv_bcaasc_logo_small" />
             </LinearLayout>
 
 
