--- a/app/src/main/res/layout-land/tv_activity_change_server.xml
+++ b/app/src/main/res/layout-land/tv_activity_change_server.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/block_base_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme_grey"
-    android:orientation="vertical">
+    android:animateLayoutChanges="true">
 
-    <include layout="@layout/include_header" />
-
-    <Button
-        android:id="@+id/btn_open_international_server"
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/bg_grey"
-        android:gravity="center"
-        android:text="打开国际版" />
+        android:background="@drawable/tv_selector"
+        android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_change_server"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/d1"
-        android:layout_marginTop="@dimen/d20"
+        android:layout_height="match_parent"
         android:background="@color/theme_grey"
-        tools:listitem="@layout/item_change_server" />
+        android:orientation="vertical">
+
+        <include layout="@layout/include_header" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_change_server"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/d1"
+            android:layout_marginTop="@dimen/d20"
+            android:background="@color/theme_grey"
+            tools:listitem="@layout/tv_item_change_server" />
 
 
-</LinearLayout>
+    </LinearLayout>
+</io.bcaas.view.tv.MainUpLayout>
