--- a/app/src/main/res/layout-land/tv_item_change_server.xml
+++ b/app/src/main/res/layout-land/tv_item_change_server.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/d80"
     android:layout_gravity="center_vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:gravity="center_vertical">
 
     <TextView
