--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -157,7 +157,7 @@
                                 android:text="@string/show_more"
                                 android:textColor="@color/white50_f1f1f1"
                                 android:textSize="@dimen/text_size_12"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
                         </LinearLayout>
                     </RelativeLayout>
 
