--- a/app/src/main/res/layout-land/tv_include_account_info.xml
+++ b/app/src/main/res/layout-land/tv_include_account_info.xml
@@ -9,7 +9,7 @@
         style="@style/tv_white_15_text_style"
         android:layout_alignRight="@+id/tv_account_address_key"
         android:gravity="center_vertical|right"
-        android:text="@string/currency" />
+        android:text="@string/token" />
 
     <io.bcaas.view.textview.TVTextView
         android:id="@+id/tv_currency"
