适配TV版我的账户信息

--- a/app/src/main/res/layout-land/tv_include_account_info.xml
+++ b/app/src/main/res/layout-land/tv_include_account_info.xml
@@ -1,89 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/button_right_color"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <io.bcaas.view.textview.TVWithStarTextView
-        android:id="@+id/tst_currency_key"
-        style="@style/tv_white_15_text_style"
-        android:layout_alignRight="@+id/tv_account_address_key"
-        android:gravity="center_vertical|right"
-        android:text="@string/token" />
-
-    <io.bcaas.view.textview.TVTextView
-        android:id="@+id/tv_currency"
-        style="@style/tv_white_13_text_style"
-        android:layout_alignBottom="@+id/tst_currency_key"
-        android:layout_marginLeft="@dimen/d20"
-        android:layout_toRightOf="@+id/tst_currency_key"
-        android:background="@drawable/tv_blue_button_selector"
-        android:clickable="true"
-        android:drawablePadding="@dimen/d5"
-        android:drawableRight="@mipmap/icon_select_white"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="center_vertical|left"
-        android:text="@string/settings" />
-
-    <TextView
-        android:id="@+id/tv_balance_key"
-        style="@style/tv_white_15_text_style"
-        android:layout_alignRight="@+id/tv_account_address_key"
-        android:layout_below="@+id/tst_currency_key"
-        android:layout_marginTop="@dimen/d30"
-        android:text="@string/account_balance"
-        android:textColor="@color/white" />
-
-    <io.bcaas.view.BcaasBalanceTextView
-        android:id="@+id/bbt_balance"
-        style="@style/tv_balance_16_bold_text_style"
-        android:layout_alignLeft="@+id/tv_currency"
-        android:layout_below="@+id/tst_currency_key"
-        android:layout_marginTop="@dimen/d30"
-        android:layout_toRightOf="@+id/tv_balance_key"
-        android:gravity="center_vertical|left" />
-
-    <ProgressBar
-        android:id="@+id/pb_balance"
-        android:layout_width="@dimen/d20"
-        android:layout_height="@dimen/d20"
-        android:layout_below="@+id/tst_currency_key"
-        android:layout_marginLeft="@dimen/d24"
-        android:layout_marginTop="@dimen/d30"
-        android:layout_toRightOf="@+id/tv_balance_key"
-        android:gravity="center"
-        android:indeterminateTint="@color/orange_yellow"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/tv_account_address_key"
-        style="@style/tv_white_15_text_style"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_balance_key"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+
+        <io.bcaas.view.textview.TVWithStarTextView
+            android:id="@+id/tst_currency_key"
+            style="@style/tv_white_15_text_style"
+            android:layout_width="@dimen/d0"
+            android:layout_weight="1.5"
+            android:gravity="center_vertical|right"
+            android:text="@string/token" />
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d20"
+            android:layout_weight="2"
+            android:gravity="center_vertical|left">
+
+            <io.bcaas.view.textview.TVTextView
+                android:id="@+id/tv_currency"
+                style="@style/tv_white_13_text_style"
+                android:layout_width="wrap_content"
+                android:background="@drawable/tv_blue_button_selector"
+                android:clickable="true"
+                android:drawableEnd="@mipmap/icon_select_white"
+                android:drawablePadding="@dimen/d5"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|left"
+                android:text="@string/settings" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/d30"
-        android:text="@string/my_account_address"
-        android:textColor="@color/white" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_qr_code"
-        android:layout_width="@dimen/d150"
-        android:layout_height="@dimen/d150"
-        android:layout_below="@+id/tv_balance_key"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/d15"
-        android:layout_toRightOf="@+id/tv_account_address_key" />
+        <TextView
+            android:id="@+id/tv_balance_key"
+            style="@style/tv_white_15_text_style"
+            android:layout_width="@dimen/d0"
+            android:layout_weight="1.5"
+            android:gravity="center_vertical|right"
+            android:text="@string/account_balance"
+            android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/tv_my_address"
-        style="@style/tv_white70_13_text_style"
-        android:layout_width="@dimen/d150"
-        android:layout_alignLeft="@+id/iv_qr_code"
-        android:layout_below="@+id/iv_qr_code"
-        android:layout_gravity="center"
-        android:layout_marginTop="-15dp"
-        android:gravity="center"
-        android:lineSpacingExtra="@dimen/d3" />
-</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d20"
+            android:layout_weight="2"
+            android:gravity="center_vertical|left">
+
+            <io.bcaas.view.BcaasBalanceTextView
+                android:id="@+id/bbt_balance"
+                style="@style/tv_balance_16_bold_text_style"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical|left" />
+
+            <ProgressBar
+                android:id="@+id/pb_balance"
+                android:layout_width="@dimen/d20"
+                android:layout_height="@dimen/d20"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical|left"
+                android:indeterminateTint="@color/orange_yellow"
+                android:visibility="gone" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d30"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_account_address_key"
+            style="@style/tv_white_15_text_style"
+            android:layout_width="@dimen/d0"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:gravity="center_vertical|right"
+            android:text="@string/my_account_address"
+            android:textColor="@color/white" />
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-15dp"
+            android:layout_weight="2"
+            android:gravity="center_vertical|left"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_qr_code"
+                android:layout_width="@dimen/d150"
+                android:layout_height="@dimen/d150"
+                android:layout_gravity="center_vertical|left" />
+
+            <TextView
+                android:id="@+id/tv_my_address"
+                style="@style/tv_white70_13_text_style"
+                android:layout_width="@dimen/d150"
+                android:layout_gravity="center_vertical|left"
+                android:layout_marginTop="-15dp"
+                android:gravity="center_vertical|left"
+                android:lineSpacingExtra="@dimen/d3" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
