--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="white70_f1f1f1">#b3F1F1F1</color>
     <color name="white30_f1f1f1">#4DF1F1F1</color>
     <color name="white20_f1f1f1">#33F1F1F1</color>
+    <color name="white60_FAFAFA">#90FAFAFA</color>
 
 
     <color name="red">#DA261F</color>
