修改首页的交易记录的背景色

--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -97,7 +97,7 @@
                                 android:layout_marginLeft="@dimen/d12"
                                 android:layout_marginRight="@dimen/d12"
                                 android:layout_marginTop="@dimen/d12"
-                                android:background="@color/grey_3333333"
+                                android:background="@color/grey_0A082D"
                                 android:gravity="center_vertical"
                                 android:orientation="horizontal"
                                 android:paddingBottom="@dimen/d4"
