--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,6 +59,7 @@
     <color name="orange_FC9003">#FC9003</color>
     <color name="grey_capture">#661d2124</color>
     <color name="grey_3333333">#333333</color>
+    <color name="grey_0A082D">#0A082D</color>
 
 
     <!--标题黑-->
